0. Metadata
-----------
File version:	$Id$
Copyright:		Copyright (C) 2005 - 2010 New Life in It Pty Ltd. All rights reserved.
License:		GNU General Public License version 2 or later.

1. Copyright and disclaimer
---------------------------
This application is opensource software released under the GPL.  Please
see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

7-Feb-2011 Andrew Eddie
 ! Added missing index.html files to some folders.