@@ -4,24 +4,26 @@
 # License GNU/GPL
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-DISTRIBUTION=Distribution
-SKIP DOWNLOAD=Skip Download
-SKIP DECOMPRESS=Skip Decompress
-NO=No
-YES=Yes
-START UPGRADE=START UPGRADE
-CHECKING...=Checking...
-PREPARING FOR CHECK...=Preparing for check...
-DOWNLOADING JOOMLA 1.6...=Downloading Joomla 1.6...
-DECOMPRESSING PACKAGE...=Decompressing package...
-INSTALLING JOOMLA 1.6...=Installing Joomla 1.6...
-UPGRADING PROGRESS...=Upgrading progress...
-PREPARING FOR MIGRATION...=Preparing for migration...
-UPGRADING TEMPLATES...=Upgrading templates...
-UPGRADING 3RD EXTENSIONS...=Upgrading 3rd extensions...
-COMING SOON=COMING SOON
-JOOMLA 1.6 UPGRADE FINISHED!=Joomla 1.6 Upgrade Finished!
-YOU CAN CHECK YOUR NEW SITE HERE=You can check your new site here
-AND=And
-SITE=Site
+J_USE_PHP5="You cannot use this extension or Joomla 1.6 because your version of PHP is out of date. Contact your host to about upgrading to PHP 5.2.4."
+
 ADMINISTRATOR=Administrator
+AND=And
+CHECKING...=Checking...
+COMING SOON=COMING SOON
+DECOMPRESSING PACKAGE...=Decompressing package...
+DISTRIBUTION=Distribution
+DOWNLOADING JOOMLA 1.6...=Downloading Joomla 1.6...
+INSTALLING JOOMLA 1.6...=Installing Joomla 1.6...
+JOOMLA 1.6 UPGRADE FINISHED!=Joomla 1.6 Upgrade Finished!
+NO=No
+PREPARING FOR CHECK...=Preparing for check...
+PREPARING FOR MIGRATION...=Preparing for migration...
+SITE=Site
+SKIP DECOMPRESS=Skip Decompress
+SKIP DOWNLOAD=Skip Download
+START UPGRADE=START UPGRADE
+UPGRADING 3RD EXTENSIONS...=Upgrading 3rd extensions...
+UPGRADING PROGRESS...=Upgrading progress...
+UPGRADING TEMPLATES...=Upgrading templates...
+YES=Yes
+YOU CAN CHECK YOUR NEW SITE HERE=You can check your new site here
